
Internal Changes
----------------
* rBuilder now requires Conary 2.0. (RBL-2580)

Command-Line Client Changes
---------------------------

* The command-line client's build-create command now accepts the --name option
  to set the name of the new build, and --build-notes and --build-notes-file
  to set the build notes from the command-line and from a file, respectively.
  (RBL-2486)

Changes in 4.0.1
================

Web Front End Changes
---------------------

* Project owners and admins may now configure a project to send commit mail
  to arbitrary e-mail addresses. (RBL-1568)
* Uploading an invalid GPG key no longer causes the web UI to backtrace.
  (RBL-1625)
* A regression in the anaconda-templates trove picker in the advanced build
  option has been fixed. (RBL-1760)
* Apache's access_log and error_log may now be viewed and downloaded from
  the Appliance Agent log viewer. (RBL-2250)
* Accessing help in project resources now opens a new {window, tab}.
  (RBL-2287)
* Accept non-admin rAPA users when adding an outbound mirror target.
  (RBL-2408)
* Remove an unused and invalid CSS style that caused warnings in some
  browsers. (RBL-2450)
* The appliance agent log file is now viewable in the Appliance Agent log
  viewer. (RBL-2451)
* Build types may be now included in /srv/rbuilder/config/rbuilder-custom.conf
  using the includeBuildType directive. Previously, one would have to modify
  /srv/rbuilder/config/rbuilder.conf and remove the "excluded" build type
  in order to include it. This change would have to be re-applied upon each
  subsequent update as rbuilder.conf is treated as a template and is
  overwritten. (RBL-2458)
* rBuilder command line client may now be installed on systems running
  Conary 2.0. (RBL-2477)
* The seldom-used rMake web UI integration has been removed. (RBL-2516)
* Removed the Mirror URL option under advanced options for building. (RBL-2470)

Build System Changes
--------------------
