@@ -38,19 +38,24 @@ class FixturedProjectTest(fixtures.FixturedUnitTest):
 
         self.sh._redirect = fakeRedirect
 
-    @fixtures.fixture('Full')
-    def testUploadBuild(self, db, data):
+    def _testUploadBuild(self, db, data, hidden=False):
         client = self.getClient("developer")
         p = client.getProject(data['projectId'])
+        if hidden:
+            # hide the project
+            admin = self.getClient("admin")
+            admin.hideProject(data['projectId'])
         b = client.getBuild(data['anotherBuildId'])
         b.setDataValue('outputToken', 'thisisasecret',
             RDT_STRING, False)
 
         self.sh.cfg = self.cfg
-        self.sh.client = client
         self.sh.req = FakeRequest(FQDN, 'PUT', '/uploadBuild/%d/testChunkedFile' % data['anotherBuildId'])
         self.sh.req.headers_in['X-rBuilder-OutputToken'] = 'thisisasecret'
-        self.sh.auth = users.Authorization(admin = True, authorized = True)
+
+        # the PUT handler runs with anonymous authorization
+        self.sh.client = self.getClient('anonymous')
+        self.sh.auth = users.Authorization(admin = False, authorized = False)
 
         testFile = open(self.archiveDir + "/testChunkedFile")
         self.sh.req.read = testFile.read
@@ -61,6 +66,13 @@ class FixturedProjectTest(fixtures.FixturedUnitTest):
         f1 = os.path.join(self.cfg.imagesPath, 'foo', str(data['anotherBuildId']), 'testChunkedFile')
         self.failUnless(os.path.exists(f1))
 
+    @fixtures.fixture('Full')
+    def testUploadBuild(self, db, data):
+        self._testUploadBuild(db, data, hidden=False)
+
+    @fixtures.fixture('Full')
+    def testUploadHiddenBuild(self, db, data):
+        self._testUploadBuild(db, data, hidden=True)
 
 if __name__ == "__main__":
     testsuite.main()
